# bark-claude-code-hook

./: .gitignore  Cargo.toml  README.en.md  README.md  README.zh-CN.md  bark.toml.example  build.rs  demo.tape  install.sh
.github/workflows/: release.yml  test.yml
notifier/: build.sh
notifier/BarkNotifier/: ActivityTabView.swift  AppDelegate.swift  DashboardTabView.swift  DataStore.swift  Info.plist  PopoverViewController.swift  RulesTabView.swift  SQLiteReader.swift  SettingsTabView.swift  SocketServer.swift  TabBarView.swift  Theme.swift
src/: lib.rs  main.rs
src/ai/: claude_cli.rs  mod.rs  prompt.rs
src/analysis/: bash_parser.rs  mod.rs  patterns.rs
src/cache/: mod.rs  schema.rs  sqlite.rs
src/cli/: cache.rs  daemon_cmd.rs  hook.rs  install.rs  install_notifier.rs  log_cmd.rs  mod.rs  rules.rs  stats.rs  status.rs  test.rs  uninstall.rs  update.rs
src/config/: mod.rs  settings.rs  toml_rules.rs
src/core/: chain_tracker.rs  custom_rules.rs  engine.rs  fast_rules.rs  mod.rs  normalizer.rs  protocol.rs  risk.rs
src/daemon/: client.rs  protocol.rs  server.rs
src/i18n/: en.rs  mod.rs  zh.rs
src/notify/: fallback.rs  helper.rs  helper_protocol.rs  mod.rs
src/tui/: app.rs  input.rs  mod.rs
src/tui/widgets/: feed.rs  mod.rs  stats_chart.rs
src/ui/: cards.rs  gradient.rs  logo.rs  mod.rs  style.rs
tests/: test_core.sh
tests/fixtures/: sample_input.json  sample_rules.toml
video/: package-lock.json  package.json
video/src/: BarkDemo.tsx  Root.tsx  animations.ts  theme.ts
video/src/components/: AnimatedNumber.tsx  Camera.tsx  MacDesktop.tsx  (+11 more)
(+11 files in other folders)
