[package]
name = "bark"
version = "2.0.2"
edition = "2021"
authors = ["shaomingqing"]
description = "AI-Powered Risk Assessment for Claude Code"
license = "MIT"
repository = "https://github.com/shaominngqing/bark-claude-code-hook"
keywords = ["claude-code", "security", "hooks", "risk-assessment"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bark"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "=4.5.23", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SQLite cache
rusqlite = { version = "0.31", features = ["bundled"] }

# Hashing
md-5 = "0.10"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1"

# Terminal
crossterm = "0.28"

# TUI dashboard
ratatui = { version = "0.29", optional = true }

# Glob matching for rules
globset = "0.4"
regex = "1"

# tree-sitter for Bash AST parsing
tree-sitter = "0.24"
tree-sitter-bash = "0.23"

# Directories
dirs = "6"

# UUID for session tracking
uuid = { version = "1", features = ["v4"] }

# Concurrency
parking_lot = "0.12"


[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"
pretty_assertions = "1"

[features]
default = ["tui"]
tui = ["dep:ratatui"]

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
